fix header color and add body content

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -69,6 +69,7 @@
 .grid-container {
 	width: 100%;
 	padding: 30px 60px;
+	background-color: white;
 	.navigation-panel {
 		display: grid;
 		grid-template-columns: auto 34.4em 1fr;
