--- a/src/components/LogoHeader/styles.css
+++ b/src/components/LogoHeader/styles.css
@@ -3,96 +3,61 @@
   padding-left: 60px;
   padding-right: 60px;
   margin-left: auto;
-  margin-right: auto;
-}
-
-.top-container .header {
-  height: 75px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-bottom: 1px solid #f1f3f3;
-}
-
-.top-container .header .full-width {
-  width: 100%;
-  display: block;
-}
-
-.top-container .header .full-width .row {
-  min-height: 1px;
-  vertical-align: top;
-  list-style: none;
-}
-
-.top-container .header .full-width .row .col {
-  vertical-align: middle;
-  width: 33.33333%;
-  display: inline-block;
-}
-
-.top-container .header .full-width .row .col .logo-container {
-  margin-top: 5px;
-  vertical-align: middle;
-  text-align: center;
-}
-
-.top-container .header .full-width .row .col .list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-align: right;
-}
-
-.top-container .header .full-width .row .col .list li {
-  margin-right: 25px;
-  display: inline-block;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.top-container .header .full-width .row .col .list li .account-link {
-  position: relative;
-  margin-right: 15px;
-}
-
-.top-container .header .full-width .row .col .list li .account-link a {
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-  cursor: pointer;
-  color: #1d2b39;
-  font-family: Franklin Gothic Condensed, sans-serif;
-}
-
-.top-container .header .full-width .row .col .list li .cart {
-  min-width: 40px;
-}
-
-.top-container .header .full-width .row .col .list li .cart button {
-  display: inline-block;
-  border: none;
-  padding: 0;
-  background: none;
-  text-align: center;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border-radius: 0;
-  vertical-align: -7px;
-  margin-right: 5px;
-  width: 17px;
-  height: 21px;
-}
-/*# sourceMappingURL=styles.css.map */
+  margin-right: auto; }
+  .top-container .header {
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #f1f3f3; }
+    .top-container .header .full-width {
+      width: 100%;
+      display: block; }
+      .top-container .header .full-width .row {
+        min-height: 1px;
+        vertical-align: top;
+        list-style: none; }
+        .top-container .header .full-width .row .col {
+          vertical-align: middle;
+          width: 33.33333%;
+          display: inline-block; }
+          .top-container .header .full-width .row .col .logo-container {
+            margin-top: 5px;
+            vertical-align: middle;
+            text-align: center; }
+          .top-container .header .full-width .row .col .list {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            text-align: right; }
+            .top-container .header .full-width .row .col .list li {
+              margin-right: 25px;
+              display: inline-block;
+              font-size: 16px;
+              line-height: 20px; }
+              .top-container .header .full-width .row .col .list li .account-link {
+                position: relative;
+                margin-right: 15px; }
+                .top-container .header .full-width .row .col .list li .account-link a {
+                  font-size: 16px;
+                  line-height: 20px;
+                  text-decoration: none;
+                  cursor: pointer;
+                  color: #1d2b39;
+                  font-family: Franklin Gothic Condensed, sans-serif; }
+              .top-container .header .full-width .row .col .list li .cart {
+                min-width: 40px; }
+                .top-container .header .full-width .row .col .list li .cart button {
+                  display: inline-block;
+                  border: none;
+                  padding: 0;
+                  background: none;
+                  text-align: center;
+                  cursor: pointer;
+                  user-select: none;
+                  appearance: none;
+                  border-radius: 0;
+                  vertical-align: -7px;
+                  margin-right: 5px;
+                  width: 17px;
+                  height: 21px; }
